--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,7 +9,6 @@ on:
 
 env:
   python-version: "3.8"
-  pyinstaller-version: "4.0"
   name: modimporter
   artifacts-content-type: application/zip
 
@@ -91,12 +90,15 @@ jobs:
           - os: windows-latest
             pip-cache-path: ~\AppData\Local\pip\Cache
             artifacts: modimporter-windows.zip
+            pyinstaller-version: "4.0"
           - os: macos-latest
             pip-cache-path: ~/Library/Caches/pip
             artifacts: modimporter-macos.zip
+            pyinstaller-version: "4.7"
           - os: ubuntu-latest
             pip-cache-path: ~/.cache/pip
             artifacts: modimporter-linux.zip
+            pyinstaller-version: "4.7"
     steps:
       - name: Checkout files
         uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
@@ -115,10 +117,10 @@ jobs:
           path: |
             ${{ env.pythonLocation }}\lib\site-packages
             ${{ matrix.pip-cache-path }}
-          key: ${{ runner.os }}-pip-cache-${{ env.pyinstaller-version }}
+          key: ${{ runner.os }}-pip-cache-${{ matrix.pyinstaller-version }}
 
       - name: Install pip dependencies
-        run: python -m pip install pyinstaller==${{ env.pyinstaller-version }}
+        run: python -m pip install pyinstaller==${{ matrix.pyinstaller-version }}
 
       - name: Build binaries with PyInstaller
         run: python -m PyInstaller --onefile ${{ env.name }}.py --name ${{ env.name }}
