pin Linux build to 20.04 to force older glibc version
Latest Ubuntu GitHub runners target glibc 2.36 (via Ubuntu 22.04),
whereas the previous GitHub runners targeted glibc 2.31 (via
Ubuntu 20.04).

This breaks compatibility with Steam Deck because Steam Deck uses the
older glibc 2.33. We pin to 20.04 so as to continue building against
glibc 2.31 and retain compatibility with Steam Deck.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -85,7 +85,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, macos-latest, ubuntu-latest]
+        os: [windows-latest, macos-latest, ubuntu-20.04]
         include:
           - os: windows-latest
             pip-cache-path: ~\AppData\Local\pip\Cache
@@ -95,7 +95,7 @@ jobs:
             pip-cache-path: ~/Library/Caches/pip
             artifacts: modimporter-macos.zip
             pyinstaller-version: "4.7"
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             pip-cache-path: ~/.cache/pip
             artifacts: modimporter-linux.zip
             pyinstaller-version: "4.7"
